--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ const socialImageURL = new URL(
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/peachfuzzz_peeking.JPG" />
+    <link rel="icon" type="image/svg+xml" href="/peachfuzzz_logo.JPG" />
     <link rel="canonical" href={canonicalURL} />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css">
     <meta name="generator" content={Astro.generator} />
