a lot of things happened
fixed the OG image link generator thingy, trying to switch images to pen peachfuzzz

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -31,7 +31,7 @@ const { Content } = await post.render();
 const ogImageUrl = typeof ogImage === "string" ? ogImage : ogImage?.src;
 const ogUrl = new URL(
   ogImageUrl ?? `/posts/${slugifyStr(title)}.png`,
-  Astro.url.origin
+  SITE.website
 ).href;
 
 const layoutProps = {
