--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,18 +7,18 @@
   html[data-theme="light"] {
     --color-fill: 250, 252, 252;
     --color-text-base: 34, 46, 54;
-    --color-accent: 211, 0, 106;
-    --color-card: 234, 206, 219;
+    --color-accent: 244, 121, 131;
+    --color-card: 244, 121, 131;
     --color-card-muted: 241, 186, 212;
-    --color-border: 227, 169, 198;
+    --color-border: 244, 121, 131;
   }
   html[data-theme="dark"] {
     --color-fill: 33, 39, 55;
     --color-text-base: 234, 237, 243;
-    --color-accent: 235, 63, 211;
-    --color-card: 52, 63, 96;
-    --color-card-muted: 125, 79, 124;
-    --color-border: 100, 36, 81;
+    --color-accent: 221, 160, 221;
+    --color-card: 223, 197, 254;
+    --color-card-muted: 223, 197, 254;
+    --color-border: 221, 160, 221;
   }
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
@@ -29,7 +29,7 @@
     display: block;
   }
   body {
-    @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base 
+    @apply flex min-h-[100svh] flex-col bg-skin-fill font-serif text-skin-base 
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
   }
   section,
@@ -122,6 +122,11 @@
 
   pre > code {
     white-space: pre;
+  }
+
+  /* Remove blockquote quotation marks */
+  .prose blockquote {
+    @apply before:content-none after:content-none;
   }
 }
 
